<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerMain"
    android:layout_width="match_parent"

    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/containerRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey50"
        android:orientation="vertical"
        android:paddingBottom="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="48dp">

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:textColor="@color/grey50"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/AppTheme.TextAppearance.Error">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="4dp"
                android:textColor="@color/grey500"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true"

            app:errorTextAppearance="@style/AppTheme.TextAppearance.Error">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:hint="@string/prompt_nickname"
                android:maxLines="1"
                android:textColor="@color/grey500"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/AppTheme.TextAppearance.Error">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black_87"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilRetypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/AppTheme.TextAppearance.Error">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txRetypePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:hint="@string/prompt_retype_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black_87"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/theme_button"
            android:paddingLeft="24dp"
            android:layout_marginTop="8dp"
            android:paddingRight="24dp"
            android:textAllCaps="true"
            android:text="@string/sign_up"
            android:textColor="@color/grey50"
            android:visibility="visible"
            app:backgroundTint="@color/colorAccent"
            app:elevation="6dp" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>